--- a/index.html
+++ b/index.html
@@ -8,49 +8,52 @@
   <body>
     <div class="container">
       <header>
-        <nav>
-          <a href="#"> Apple icon</a>
-          <a href="#"> Store </a>
-          <a href="#"> Mac </a>
-          <a href="#"> iPod </a>
-          <a href="#"> iPhone </a>
-          <a href="#"> iPad </a>
-          <a href="#"> iTunes </a>
-          <a href="#"> Support </a>
-          <div class="search-box">
-            <input type="text" name="input-search" value="">
-          </div>
-        </nav>
-        <!-- Main text -->
-        <a href="#">
-          <img src="img/header1.png" alt="" width="980" height="104">
-        </a>
-        <a href="">
-          <img src="img/header2.png" alt="">
-        </a>
-        <a href="#">
-          <img src="img/header3.png" alt="">
-        </a>
+        <article class="header-container">
+          <nav>
+            <a href="#"> Apple icon</a>
+            <a href="#"> Store </a>
+            <a href="#"> Mac </a>
+            <a href="#"> iPod </a>
+            <a href="#"> iPhone </a>
+            <a href="#"> iPad </a>
+            <a href="#"> iTunes </a>
+            <a href="#"> Support </a>
+            <div class="search-box">
+              <input type="text" name="input-search" value="">
+            </div>
+          </nav>
+          <!-- Main text -->
+          <a href="#">
+            <img src="img/header1.png" alt="" width="980" height="104">
+          </a>
+          <a href="">
+            <img src="img/header2.png" alt="">
+          </a>
+          <a href="#">
+            <img src="img/header3.png" alt="">
+          </a>
+        </article>
+
       </header>
-      <section>
+      <section class="thumbnails">
         <div class="mac-options">
           <a href="https://web.archive.org/web/20140301004610/http://www.apple.com/iphone-5s/">
-            <img src="img/iphone5s.jpg" alt="">
+            <img src="img/iphone5s.jpg" alt="" width="364" height="200">
           </a>
         </div>
         <div class="mac-options">
           <a href="https://web.archive.org/web/20140301004610/http://www.apple.com/iphone-5c/">
-            <img src="img/iphone5c.jpg" alt="">
+            <img src="img/iphone5c.jpg" alt="" width="364" height="200">
           </a>
         </div>
         <div class="mac-options">
           <a href="https://web.archive.org/web/20140301004610/http://www.apple.com/30-years/">
-            <img src="img/hbd_mac.jpg" alt="">
+            <img src="img/hbd_mac.jpg" alt="" width="364" height="200">
           </a>
         </div>
         <div class="mac-options">
           <a href="https://web.archive.org/web/20140301004610/http://www.apple.com/supplier-responsibility/">
-            <img src="img/supplier.jpg" alt="">
+            <img src="img/supplier.jpg" alt="" width="364" height="200">
           </a>
         </div>
       </section>
