Adding style to nav bar (in progress)

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
     <div class="container">
       <header>
         <article class="header-container">
-          <nav>
-            <a href="#"> Apple icon</a>
-            <a href="#"> Store </a>
-            <a href="#"> Mac </a>
-            <a href="#"> iPod </a>
-            <a href="#"> iPhone </a>
-            <a href="#"> iPad </a>
-            <a href="#"> iTunes </a>
-            <a href="#"> Support </a>
+          <nav class="nav-bar">
+            <a href="#"> <span id="apple-icon"> </span> </a>
+            <a href="#"> <span id="store-text"></span> </a>
+            <a href="#"> <span id="mac-text"></span> </a>
+            <a href="#"> <span id="ipod-text"></span> </a>
+            <a href="#"> <span id="iphone-text"></span> </a>
+            <a href="#"> <span id="ipad-text"></span> </a>
+            <a href="#"> <span id="itunes-text"></span> </a>
+            <a href="#"> <span id="support-text"></span> </a>
             <div class="search-box">
               <input type="text" name="input-search" value="">
             </div>
