Adding style to search box in nav bar

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <a href="#"> <span id="support-text"></span> </a>
             <div class="search-box">
               <input type="text" name="input-search" value="">
+              <span class="search-icon"> </span>
             </div>
           </nav>
           <!-- Main text -->
