Adding main text , finishing main text page

--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title> Using Gradients </title>
+
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
@@ -24,15 +26,21 @@
             </div>
           </nav>
           <!-- Main text -->
-          <a href="#">
-            <img src="img/header1.png" alt="" width="980" height="104">
-          </a>
-          <a href="">
-            <img src="img/header2.png" alt="">
-          </a>
-          <a href="#">
-            <img src="img/header3.png" alt="">
-          </a>
+          <div class="first-main-text">
+            <a href="#">
+              <img src="img/header1.png" alt="" width="980" height="104">
+            </a>
+          </div>
+          <div class="second-main-text">
+            <a href="">
+              <img src="img/header2.png" alt="" width="980" height="82">
+            </a>
+          </div>
+          <div class="third-main-text">
+            <a href="#">
+              <img src="img/header3.png" alt="" width="980" height="64">
+            </a>
+          </div>
         </article>
 
       </header>
