Adding style to the footer (in progress)

--- a/index.html
+++ b/index.html
@@ -67,24 +67,28 @@
         </div>
       </section>
       <footer>
-        <p>
-          Shop the <a href="#"> Apple Online Store </a> (1-800-MY-APPLE), visit <a href="#"> an Apple Retail Store </a>, or find a <a href="#"> Reseller </a>
-        </p>
-        <ul class="footer-links">
-          <li><a href="#"> Site Map </a></li>
-          <li><a href="#"> Hot News </a></li>
-          <li><a href="#"> RSS Feeds </a></li>
-          <li><a href="#"> Media Info </a></li>
-          <li><a href="#"> Environment </a></li>
-          <li><a href="#"> Job Opportunities </a></li>
-          <li><a href="#"> Contact Us </a></li>
-          <li><a href="#"> Language Icon </a></li>
-        </ul>
-        <p> Copyright © 2014 Apple Inc. All rights reserved. </p>
-        <ul class="footer-links">
-          <li><a href="#"> Terms of Use </a></li>
-          <li><a href="#"> Privacy Policy </a></li>
-        </ul>
+        <div class="contact">
+          <p>
+            Shop the <a href="#"> Apple Online Store </a> (1-800-MY-APPLE), visit <a href="#"> an Apple Retail Store </a>, or find a <a href="#"> Reseller </a>
+          </p>
+          <ul class="footer-links">
+            <li><a href="#"> Site Map </a></li>
+            <li><a href="#"> Hot News </a></li>
+            <li><a href="#"> RSS Feeds </a></li>
+            <li><a href="#"> Media Info </a></li>
+            <li><a href="#"> Environment </a></li>
+            <li><a href="#"> Job Opportunities </a></li>
+            <li><a href="#"> Contact Us </a></li>
+            <li><a href="#"> <img src="img/lang-icon.png" alt="" height="16" width="16"> </a></li>
+          </ul>
+        </div>
+        <div class="legal">
+          <span> Copyright © 2014 Apple Inc. All rights reserved. </span>
+          <ul class="footer-links">
+            <li><a href="#"> Terms of Use </a></li>
+            <li><a href="#"> Privacy Policy </a></li>
+          </ul>
+        </div>
       </footer>
     </div>
   </body>
